src/style.css
* {
    font-family: monospace;
    
}

a {
    color:darkmagenta;
}

nav {
    display: block;
    text-align: center;
    padding-top: 14px;
    padding-bottom: 16px;
}

.center {
    display: flex;
    width: 60%;
    margin: auto;
    padding-top: 30px;

  }

  .horizontal {
    flex: 1 0 auto;
  }

.header {
    display: block;
    width: 30%;
    height: auto;
    margin-left: auto;
    margin-right: auto;
}

.post-list {
    border-color: darkmagenta;
    border-style: double;
    border-width: 5px;
    background-color: rgb(254, 246, 254);
    margin: 0 auto;
    width: 60%;
    padding-top: 25px;
    padding-bottom: 25px;
}

.content {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    padding: 20px;
}

.right {
    text-align: right;
}

